# tauri-plugin-persisted-scope

./: CHANGELOG.md  Cargo.toml  README.md
.changes/: config.json  initial.md
.github/workflows/: covector-version-or-publish.yml
examples/vanilla/public/: index.html
examples/vanilla/src-tauri/: Cargo.toml  tauri.conf.json
examples/vanilla/src-tauri/src/: main.rs
src/: lib.rs
