[package]
name = "tauri-plugin-persisted-scope"
version = "0.0.0"
authors = [ "Tauri Programme within The Commons Conservancy" ]
license = "Apache-2.0 OR MIT"
edition = "2021"

[dependencies]
tauri = "1.0.0"
serde = "1.0"
serde_json = "1.0"
bincode = "1"

[features]
protocol-asset = ["tauri/protocol-asset"]
