[package]
name = "tauri-plugin-persisted-scope"
version = "0.1.0"
authors = [ "Tauri Programme within The Commons Conservancy" ]
description = "A Tauri Plugin that saves the filesystem and asset scopes and restores it when the app is reopened"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/tauri-apps/tauri-plugin-persisted-scope"
edition = "2021"

[dependencies]
tauri = "1.2"
thiserror = "1"
serde = "1.0"
serde_json = "1.0"
bincode = "1"

[features]
protocol-asset = [ "tauri/protocol-asset" ]
