[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = [ "Tauri Programme within The Commons Conservancy" ]
repository = ""
edition = "2021"
rust-version = "1.56"

[dependencies]
#tauri = { version = "1.0.0-rc.4", features = ["dialog-open", "fs-read-file"] }
tauri = { git = "https://github.com/tauri-apps/tauri", features = ["dialog-open", "fs-read-file"] }
tauri-plugin-persisted-scope = { path = "../../.." }

[build-dependencies]
tauri-build = "1.0.0-rc.3"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
